--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
 	"devDependencies": {
 		"@chialab/esbuild-plugin-html": "^0.18.2",
 		"@chialab/rna": "^0.18.0",
+		"@chialab/rna-dev-server": "^0.18.0",
 		"@fontsource-variable/roboto-flex": "^5.1.0",
 		"@fontsource-variable/roboto-slab": "^5.1.0",
 		"htmlnano": "^2.1.1",
 		"rimraf": "^6.0.1"
-	}
+	},
+	"packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
