--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@parcel/packager-raw-url": "2.14.4",
 		"@parcel/transformer-jsonld": "2.14.4",
 		"@parcel/transformer-webmanifest": "2.14.4",
+		"ava": "^6.3.0",
 		"parcel": "^2.14.4",
 		"rimraf": "^6.0.1",
 		"sharp": "^0.33.5",
