--- a/project-metadata.json
+++ b/project-metadata.json
@@ -2,7 +2,7 @@
 	"$schema": "https://johng.io/schema/project-metadata.json",
 	"name": "Tally",
 	"tagline": "Character Counter",
-	"background": "An online character counter, created in order to get more familiar with using CSS grid layouts, text parsing, and cookie handling in JavaScript. I have since ported the site to a Chrome extension that over 200 users.",
+	"background": "An online word counter, created in order to get more familiar with using CSS grid layouts, text parsing, and cookie handling in JavaScript. The site runs entirely client-side for privacy and has over 1000 organic monthly visits.",
 	"logoPath": "src/assets/images/logo.svg",
 	"category": "App",
 	"subcategory": "Web",
