--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"clean": "rimraf dist",
 		"test": "ava",
 		"lint": "biome lint .",
-		"format": "biome format . --fix"
+		"format": "biome format . --fix",
+		"upgrade-interactive": "pnpx npm-check-updates -i --format group -p pnpm"
 	},
 	"keywords": [
 		"word counter",
@@ -28,11 +29,13 @@
 		"@biomejs/biome": "1.9.4",
 		"@fontsource-variable/roboto-flex": "^5.2.8",
 		"@fontsource-variable/roboto-slab": "^5.2.8",
+		"@parcel/config-default": "^2.16.0",
 		"@parcel/packager-raw-url": "2.16.0",
 		"@parcel/transformer-jsonld": "2.16.0",
 		"@parcel/transformer-webmanifest": "2.16.0",
 		"ava": "^6.4.1",
 		"parcel": "^2.16.0",
+		"parcel-reporter-static-files-copy": "^1.5.3",
 		"rimraf": "^6.0.1",
 		"sharp": "^0.33.5",
 		"svgo": "^3.3.2"
