--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-astro-organize-imports": "^0.4.11",
+		"puppeteer": "^24.24.0",
 		"radashi": "^12.6.2",
 		"sharp": "^0.34.4",
 		"typescript": "^5.9.3"
