--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
 		"typecheck": "astro check",
 		"format:check": "prettier --check .",
 		"format:write": "prettier --write .",
-		"upgrade-interactive": "pnpx npm-check-updates -i --format group -p pnpm",
-		"postinstall": "pnpx puppeteer browsers install chrome"
+		"upgrade-interactive": "pnpx npm-check-updates -i --format group -p pnpm"
 	},
 	"devDependencies": {
 		"@astrojs/check": "^0.9.4",
