build: replace pnpm with Bun

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
 		"**/.astro": true,
 		"**/dist": true,
 		"**/node_modules": true,
-		"**/pnpm-lock.yaml": true
+		"**/bun.lock": true
 	},
 	"prettier.documentSelectors": ["**/*.astro"],
 	"[astro]": {
