--- a/package.json
+++ b/package.json
@@ -69,13 +69,12 @@
 		"@lucide/astro": "^0.546.0",
 		"@nanostores/logger": "^1.0.0",
 		"@nanostores/persistent": "^1.1.0",
+		"@playform/compress": "^0.2.0",
 		"astro": "^5.14.6",
 		"astro-better-image-service": "^2.1.9",
 		"astro-capo": "^0.0.1",
-		"astro-remove-whitespace": "^1.0.1",
 		"astro-robots-txt": "^1.0.0",
 		"astro-snapshot": "./src/lib/astro-snapshot",
-		"lightningcss": "^1.30.2",
 		"nanostores": "^1.0.1",
 		"radashi": "^12.7.0",
 		"sharp": "^0.34.4",
