chore(deps): add puppeteer to trustedDependencies

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
 		"upgrade-interactive": "ncu -i --format group"
 	},
 	"trustedDependencies": [
-		"astro-snapshot"
+		"astro-snapshot",
+		"puppeteer"
 	],
 	"devDependencies": {
 		"@astrojs/check": "0.9.5",
