chore: change GitHub and Patreon usernames from 'jerboa88' to 'twocaretcat'

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"online tool"
 	],
 	"homepage": "https://johng.io/p/tally",
-	"bugs": "https://github.com/jerboa88/Tally/issues",
+	"bugs": "https://github.com/twocaretcat/Tally/issues",
 	"license": "AGPL-3.0-only",
 	"author": {
 		"name": "John Goodliff",
@@ -27,11 +27,11 @@
 		},
 		{
 			"type": "GitHub Sponsors",
-			"url": "https://github.com/sponsors/jerboa88"
+			"url": "https://github.com/sponsors/twocaretcat"
 		},
 		{
 			"type": "Patreon",
-			"url": "https://patreon.com/jerboa88"
+			"url": "https://patreon.com/twocaretcat"
 		},
 		{
 			"type": "Brave Creators",
@@ -42,7 +42,7 @@
 	"type": "module",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/jerboa88/Tally.git"
+		"url": "git+https://github.com/twocaretcat/Tally.git"
 	},
 	"scripts": {
 		"dev": "astro dev",
@@ -79,10 +79,10 @@
 		"astro-better-image-service": "^2.1.9",
 		"astro-capo": "^0.0.1",
 		"astro-robots-txt": "^1.0.0",
-		"astro-snapshot": "github:jerboa88/astro-snapshot",
+		"astro-snapshot": "github:twocaretcat/astro-snapshot",
 		"nanostores": "^1.0.1",
 		"radashi": "^12.7.0",
 		"sharp": "^0.34.4",
-		"tally-ts": "github:jerboa88/tally-ts"
+		"tally-ts": "github:twocaretcat/tally-ts"
 	}
 }
